Completed the project

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav mr-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
+                        <li class="nav-item active">
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
@@ -97,7 +97,7 @@
             </div>
             <div class="row products">
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-5 flex-column">
-                    <a onclick="showDetails()">
+                    <a href="products/hydroseal.html">
                         <div class="box" data-name="hydroseal">
                             <h4>HydroSeal</h4>
                             <p>A penetrating chemical with high penetrating and water repellent effect.</p>
@@ -105,7 +105,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
-                    <a onclick="showDetails()">
+                    <a href="products/primebond.html">
                         <div class="box" data-name="primebond">
                             <h4>PrimeBond+</h4>
                             <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
@@ -113,7 +113,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
-                    <a onclick="showDetails()">
+                    <a href="products/putopcoat.html">
                         <div class="box" data-name="PutopCoat">
                             <h4>PUTopCoat</h4>
                             <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
@@ -121,7 +121,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6 flex-column">
-                    <a onclick="showDetails()">
+                    <a href="products/elastobond.html">
                         <div class="box" data-name="elastobond">
                             <h4>Elastowhite</h4>
                             <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
@@ -186,7 +186,7 @@
 
     <!-- Designed Section -->
     <div class="row Design-section">
-        <h1>© Copyright<span style="color:whitesmoke;"> Phenix Chemical</span>. All Rights Reserved</h1>
+        <h1>© Copyright<span style="color:whitesmoke;"> Pheonix Chemical</span>. All Rights Reserved</h1>
         <h1>
             Designed by<span style="color:whitesmoke;"> GRANDEUR NET</span>
         </h1>
