--- a/products.html
+++ b/products.html
@@ -22,30 +22,32 @@
 <body>
     <!--navbar section begins-->
     <div class="header_section">
-        <nav class="navbar navbar-expand-lg">
-            <a class="logo" href="index.html">
-                <h1>PHEONIX CHEMICALS</h1>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-                <span class="navbar-toggler-icon"></span>
-           </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="About.html">About</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="products.html">Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <div class="container-one">
+            <nav class="navbar navbar-expand-lg">
+                <a class="logo" href="index.html">
+                    <h1>PHEONIX CHEMICALS</h1>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+                    <span class="navbar-toggler-icon"></span>
+               </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="nav navbar-nav mr-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="About.html">About</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="products.html">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </div>
     <!--navbar section ends-->
     <!--======================================================================-->
@@ -53,12 +55,12 @@
     <section class="section">
         <div class="product-container">
             <div class="section-title">
-                <h1>Our Products</h1>
+                <h1 style="color: #CF0A0A; text-decoration:overline;">Our Products</h1>
                 <p>We offer a wide range of products for construction chemicals include most reliable products available for all your needs. </p>
             </div>
             <div class="row products">
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                    <a href="singleproduct.html">
+                    <a href="products/hydroseal.html">
                         <div class="box" data-name="hydro">
                             <h4>HydroSeal</h4>
                             <p>A penetrating chemical with high penetrating and water repellent effect.</p>
@@ -66,7 +68,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
-                    <a href="singleproduct.html">
+                    <a href="products/primebond.html">
                         <div class="box" data-name="prime">
                             <h4>PrimeBond+</h4>
                             <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
@@ -74,7 +76,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
-                    <a href="singleproduct.html">
+                    <a href="products/putopcoat.html">
                         <div class="box" data-name="putop">
                             <h4>PUTopCoat</h4>
                             <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
@@ -82,7 +84,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
-                    <a href="singleproduct.html">
+                    <a href="products/elastowhite.html">
                         <div class="box" data-name="white">
                             <h4>Elastowhite</h4>
                             <p>An acrylic heatproofing chemical which gives cooling effect due to the reflective properties. </p>
@@ -92,7 +94,7 @@
             </div>
             <div class="row products">
                 <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
-                    <a href="singleproduct.html">
+                    <a href="products/hydroseal.html">
                         <div class="box" data-name="hydroip">
                             <h4>HydroSealP</h4>
                             <p>A penetrating chemical with high penetrating and water repellent effect.</p>
@@ -100,7 +102,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                    <a href="singleproduct.html">
+                    <a href="products/elastobond.html">
                         <div class="box" data-name="bond">
                             <h4>ElastoBond</h4>
                             <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
@@ -108,7 +110,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                    <a href="singleproduct.html">
+                    <a href="products/elastoblack.html">
                         <div class="box" data-name="black">
                             <h4>ElastoBlack</h4>
                             <p>ElastoBlack is a highly elastic tough waterproofing system based on modified synthetic latex water based black / grey pigmented cold applied liquid membrane.</p>
@@ -116,7 +118,7 @@
                     </a>
                 </div>
                 <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                    <a href="singleproduct.html">
+                    <a href="products/puinjectgrout.html">
                         <div class="box" data-name="puinject">
                             <h4>PUInjectGrout</h4>
                             <p>PUInjectGrout is a low viscous, single Component, hydrophobic, MDI-based, polyurethane injection resin without catalyst.</p>
@@ -126,148 +128,6 @@
             </div>
         </div>
     </section>
-
-    <div class="section product mt-5 p-2" name="hydroseal">
-        <div class="row">
-            <div class="col-lg-6 col-md-12 justify-content-center">
-                <img src="images/HydroSeal.png">
-            </div>
-            <div class="section-title col-lg-6 col-md-12 justify-content-center">
-                <h1>HydroSeal</h1>
-                <p>
-                    HydroSeal is a reactive, penetrative, water-soluble hydrophobic solution. It is a water based organic polymer with high penetrating and water repellent effect. It is developed to offer new possibilities of technical improvement. Its use allows to improve
-                    water resistance almost all kind of surface.
-                </p>
-            </div>
-        </div>
-        <div class="details accordion" id="accordionPanel">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="IntroductionHead">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#IntroductionBody" aria-expanded="false" aria-controls="IntroductionBody">
-                        Introduction
-                    </button>
-                </h2>
-                <div id="IntroductionBody" class="accordion-collapse collapse show" aria-labelledby="IntroductionHead">
-                    <div class="accordion-body">
-                        HydroSeal is a reactive, penetrative, water-soluble hydrophobic solution. It is a water based organic polymer with high penetrating and water repellent effect. It is developed to offer new possibilities of technical improvement. Its use allows to improve
-                        water resistance almost all kind of surface.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="advantagesHead">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#advantagesBody" aria-expanded="false" aria-controls="advantagesBody">
-                        Advantages
-                    </button>
-                </h2>
-                <div id="advantagesBody" class="accordion-collapse collapse" aria-labelledby="advantagesHead">
-                    <div class="accordion-body">
-                        <ul>
-                            <li><i class="fa fa-caret-right"></i>Reactive, Penetrative and Long Lasting.</li>
-                            <li><i class="fa fa-caret-right"></i>Penetrates deep up to 5 to 7 mm due to very low molecule size.</li>
-                            <li><i class="fa fa-caret-right"></i>Protect substrates from deteriorating due to weathering.</li>
-                            <li><i class="fa fa-caret-right"></i>Hydrophobic agent as well as penetrating solution for concrete/cement plaster & gypsum etc.</li>
-                            <li><i class="fa fa-caret-right"></i>Excellent film formation and improves the strength of surface.</li>
-                            <li><i class="fa fa-caret-right"></i>Good alkali and water resistance and allow the surface to breathe.</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="SpecificationsHead">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#SpecificationsBody" aria-expanded="false" aria-controls="SpecificationsBody">
-                        Specifications
-                    </button>
-                </h2>
-                <div id="SpecificationsBody" class="accordion-collapse collapse" aria-labelledby="SpecificationsHead">
-                    <div class="accordion-body">
-                        <table>
-                            <tr>
-                                <th>Properties</th>
-                                <th>Specifications</th>
-                            </tr>
-                            <tr>
-                                <td>Appearance</td>
-                                <td>Milky, white and low viscous</td>
-                            </tr>
-                            <tr>
-                                <td>Emulsifying System</td>
-                                <td>Anionic/Non-Ionic</td>
-                            </tr>
-                            <tr>
-                                <td>Total Solids (%)</td>
-                                <td>32.0 ± 2.0</td>
-                            </tr>
-                            <tr>
-                                <td>pH at 25&deg;C</td>
-                                <td>8 to 10</td>
-                            </tr>
-                            <tr>
-                                <td>Brookfield Viscosity LVF (CPS) SP.1,6 RPM at 25&deg;C</td>
-                                <td>20</td>
-                            </tr>
-                            <tr>
-                                <td>Specific Gravity</td>
-                                <td>1.025 ± 0.02</td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="CoverageHead">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#CoverageBody" aria-expanded="false" aria-controls="CoverageBody">
-                        Coverage
-                    </button>
-                </h2>
-                <div id="CoverageBody" class="accordion-collapse collapse" aria-labelledby="CoverageHead">
-                    <div class="accordion-body">
-                        Ideal consumption 120 grams to 200 gram per SQM.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="StorageHead">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#StorageBody" aria-expanded="false" aria-controls="StorageBody">
-                        Storage
-                    </button>
-                </h2>
-                <div id="StorageBody" class="accordion-collapse collapse" aria-labelledby="StorageHead">
-                    <div class="accordion-body">
-                        Store between temperature of 5&deg;C to 40&deg;C. Keep container closed when not in use.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="ShelfHead">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#ShelfBody" aria-expanded="false" aria-controls="ShelfBody">
-                        Shelf-Life
-                    </button>
-                </h2>
-                <div id="ShelfBody" class="accordion-collapse collapse" aria-labelledby="ShelfHead">
-                    <div class="accordion-body">
-                        18 Months from date of manufacturing provided stored under shade, away from direct heat and sunlight and well protected from freezing.
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="PackagingHead">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#PackagingBody" aria-expanded="false" aria-controls="PackagingBody">
-                        Packaging
-                    </button>
-                </h2>
-                <div id="PackagingBody" class="accordion-collapse collapse" aria-labelledby="PackagingHead">
-                    <div class="accordion-body">
-                        25 Kg Carboys / drum
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-
-
 
     <!--product section ends-->
     <!--======================================================================-->
@@ -315,6 +175,15 @@
     </footer>
     <!--footer section ends-->
     <!--======================================================================-->
+    <!-- Designed Section -->
+    <div class="row Design-section">
+        <h1>© Copyright<span style="color:whitesmoke;"> Pheonix Chemicals</span>. All Rights Reserved</h1>
+        <h1>
+            Designed by<span style="color:whitesmoke;"> GRANDEUR NET</span>
+        </h1>
+    </div>
+    <!-- design section send -->
+
     <script async src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </body>
