--- a/About.html
+++ b/About.html
@@ -9,9 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://kit.fontawesome.com/cb897442a3.css" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/cb897442a3.js" crossorigin="anonymous"></script>
     <title>About</title>
 </head>
 
@@ -19,30 +17,32 @@
 
     <!--Nav bar section starts-->
     <div class="header_section">
-        <nav class="navbar navbar-expand-lg">
-            <a class="logo" href="index.html">
-                <h1>PHEONIX CHEMICALS</h1>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-                <span class="navbar-toggler-icon"></span>
-           </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="About.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="products.html">Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <div class="container-one">
+            <nav class="navbar navbar-expand-lg">
+                <a class="logo" href="index.html">
+                    <h1>PHEONIX CHEMICALS</h1>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+                    <span class="navbar-toggler-icon"></span>
+               </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="nav navbar-nav mr-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="About.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="products.html">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </div>
     <!--Nav bar section ends-->
     <!--======================================================================-->
@@ -50,7 +50,7 @@
     <section class="section mt-5 p-2">
         <div class="container">
             <div class="section-title">
-                <h1>About us</h1>
+                <h1 style="color: #CF0A0A; text-decoration:overline;">About us</h1>
                 <p>
                     Typically waterproofing is the process of making a structure water-resistant or impervious to the ingress of water. Water-Proofing is essential that prevents water from penetrating buildings also helps to keep the inside areas dry. It helps in reducing
                     the humidity inside the building, minimizing the damage done to furniture and alike.In areas that experience high annual rainfall and occasional flooding events, water-Proofing is a must. At Pheonix Chemicals we offer a wide range
@@ -58,7 +58,7 @@
                 </p>
             </div>
             <div class="section-title">
-                <h1 class="text-center mt-5 p-2">Frequently Asked Questions</h1>
+                <h1 style="color: #CF0A0A; text-decoration:overline;" class="text-center mt-5 p-2">Frequently Asked Questions</h1>
             </div>
             <br>
             <div class="accordion" id="accordionPanel">
@@ -149,6 +149,20 @@
     </footer>
     <!--Footer section ends-->
     <!--======================================================================-->
+    <!-- Designed Section -->
+    <div class="row Design-section">
+        <h1>© Copyright<span style="color:whitesmoke;"> Pheonix Chemical</span>. All Rights Reserved</h1>
+        <h1>
+            Designed by<span style="color:whitesmoke;"> GRANDEUR NET</span>
+        </h1>
+
+    </div>
+    <!-- design section send -->
+
+    <script src="https://kit.fontawesome.com/cb897442a3.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
 </body>
 
 </html>
