--- a/contact.html
+++ b/contact.html
@@ -9,39 +9,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://kit.fontawesome.com/cb897442a3.css" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/cb897442a3.js" crossorigin="anonymous"></script>
     <title>Contact</title>
 </head>
 
 <body>
     <!--navbar section begins-->
     <div class="header_section">
-        <nav class="navbar navbar-expand-lg">
-            <a class="logo" href="index.html">
-                <h1>PHEONIX CHEMICALS</h1>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
-                <span class="navbar-toggler-icon"></span>
-           </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="About.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="products.html">Products</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <div class="container-one">
+            <nav class="navbar navbar-expand-lg">
+                <a class="logo" href="index.html">
+                    <h1>PHEONIX CHEMICALS</h1>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+                    <span class="navbar-toggler-icon"></span>
+               </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="nav navbar-nav mr-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="About.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="products.html">Products</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="contact.html">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </div>
     <!--navbar section ends-->
     <!--======================================================================-->
@@ -50,7 +50,7 @@
     <section class="contact section mt-5 p-2">
         <div class="container">
             <div class="section-title">
-                <h1>Contact us</h1>
+                <h1 style="color: #CF0A0A; text-decoration:overline;">Contact us</h1>
                 <p>Any questions or remarks? Just write us a message!</p>
             </div>
             <div class="row">
@@ -94,7 +94,7 @@
                             <textarea class="form-control" name="message" rows="15" required></textarea>
                         </div>
                         <div class="text-center">
-                            <button type="submit">Send Message</button>
+                            <button type="submit" class="btn btn-outline-danger p-3">Send Message</button>
                         </div>
                     </form>
                 </div>
@@ -148,6 +148,18 @@
     </footer>
     <!--footer section ends-->
     <!--======================================================================-->
+    <!-- Designed Section -->
+    <div class="row Design-section">
+        <h1>© Copyright<span style="color:whitesmoke;"> Pheonix Chemical</span>. All Rights Reserved</h1>
+        <h1>
+            Designed by<span style="color:whitesmoke;"> GRANDEUR NET</span>
+        </h1>
+
+    </div>
+    <!-- design section send -->
+
+    <script src="https://kit.fontawesome.com/cb897442a3.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
