--- a/products/elastowhite.html
+++ b/products/elastowhite.html
@@ -19,7 +19,7 @@
     <div class="header_section">
         <div class="container-one">
             <nav class="navbar navbar-expand-lg">
-                <a class="logo" href="index.html">
+                <a class="logo" href="/index.html">
                     <h1>PHEONIX CHEMICALS</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
@@ -28,16 +28,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav mr-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="/index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="About.html">About</a>
+                            <a class="nav-link" href="/About.html">About</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="products.html">Products</a>
+                            <a class="nav-link" href="/products.html">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact Us</a>
+                            <a class="nav-link" href="/contact.html">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -247,7 +247,7 @@
         </div>
         <div class="row products">
             <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                <a href="products/puinjectgrout.html">
+                <a href="/products/puinjectgrout.html">
                     <div class="box" data-name="puinject">
                         <h4>PUInjectGrout</h4>
                         <p>PUInjectGrout is a low viscous, single Component, hydrophobic, MDI-based, polyurethane injection resin without catalyst.</p>
@@ -255,7 +255,7 @@
                 </a>
             </div>
             <div class="col-lg-3 align-items-stretch mt-5 col-md-6">
-                <a href="products/putopcoat.html">
+                <a href="/products/putopcoat.html">
                     <div class="box" data-name="putop">
                         <h4>PUTopCoat</h4>
                         <p>A hybrid PU & Bituminous chemical used for waterproofing.</p>
@@ -263,7 +263,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                <a href="products/elastobond.html">
+                <a href="/products/elastobond.html">
                     <div class="box" data-name="bond">
                         <h4>ElastoBond</h4>
                         <p>A cement modifier used for Crack Filling, Anchor & Grout, Waterproofing and Damp Proofing.</p>
@@ -271,7 +271,7 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-6 align-items-stretch mt-5">
-                <a href="products/hydroseal.html">
+                <a href="/products/hydroseal.html">
                     <div class="box" data-name="hydro">
                         <h4>HydroSeal</h4>
                         <p>A penetrating chemical with high penetrating and water repellent effect.</p>
